--- a/templates/address/index.html.twig
+++ b/templates/address/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AddressController!{% endblock %}
+{% block title %}Address index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Address index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Street</th>
+                <th>Department</th>
+                <th>ZipCode</th>
+                <th>Country</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for address in addresses %}
+            <tr>
+                <td>{{ address.id }}</td>
+                <td>{{ address.street }}</td>
+                <td>{{ address.department }}</td>
+                <td>{{ address.zipCode }}</td>
+                <td>{{ address.country }}</td>
+                <td>
+                    <a href="{{ path('app_address_show', {'id': address.id}) }}">show</a>
+                    <a href="{{ path('app_address_edit', {'id': address.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ilyes/OneDrive/Bureau/myBesinessCase/src/Controller/AddressController.php'|file_link(0) }}">src/Controller/AddressController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ilyes/OneDrive/Bureau/myBesinessCase/templates/address/index.html.twig'|file_link(0) }}">templates/address/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_address_new') }}">Create new</a>
 {% endblock %}
