--- a/templates/nft/index.html.twig
+++ b/templates/nft/index.html.twig
@@ -1,20 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NftController!{% endblock %}
+{% block title %}Nft index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Nft index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Price</th>
+                <th>CreatedAt</th>
+                <th>Title</th>
+                <th>Src</th>
+                <th>Weight</th>
+                <th>Format</th>
+                <th>Description</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for nft in nfts %}
+            <tr>
+                <td>{{ nft.id }}</td>
+                <td>{{ nft.price }}</td>
+                <td>{{ nft.createdAt ? nft.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ nft.title }}</td>
+                <td>{{ nft.src }}</td>
+                <td>{{ nft.weight }}</td>
+                <td>{{ nft.format }}</td>
+                <td>{{ nft.description }}</td>
+                <td>
+                    <a href="{{ path('app_nft_show', {'id': nft.id}) }}">show</a>
+                    <a href="{{ path('app_nft_edit', {'id': nft.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="9">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ilyes/OneDrive/Bureau/myBesinessCase/src/Controller/NftController.php'|file_link(0) }}">src/Controller/NftController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ilyes/OneDrive/Bureau/myBesinessCase/templates/nft/index.html.twig'|file_link(0) }}">templates/nft/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_nft_new') }}">Create new</a>
 {% endblock %}
